@@ -15,7 +15,7 @@ This makes these internal functions technically not callable from
 application code.
 
 ** `guile-config link' now prints `-L$libdir' before `-lguile'
-** Fix build issue on Tru64
+** Fix build issue on Tru64 and ia64-hp-hpux11.23 (`SCM_UNPACK' macro)
 
 
 Changes in 1.8.5 (since 1.8.4)
